--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -27,4 +27,5 @@
     <string name="_4_digit_pin">4-siffrig kod</string>
     <string name="sign_up_new_elder">Registrera ny Äldre</string>
     <string name="username">Användarnamn</string>
+    <string name="meal_reminder">Meal Reminder</string>
 </resources>
