--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="_4_digit_pin">4 digit PIN</string>
     <string name="sign_up_new_elder">Sign up new Elder</string>
     <string name="username">Username</string>
+    <string name="meal_reminder">Meal Reminder</string>
 </resources>
